<resources>
    <string name="app_name">OvertimeNote</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="poster">Poster</string>
    <string name="save">Save</string>
    <string name="lookup">…</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="menu_add">Menu Add</string>
    <string name="person_add">Person Add</string>
    <string name="food">Food</string>
    <string name="search">search</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="total">Total</string>
    <string name="person">Person</string>
</resources>
